pkg/interface/lib/opt/lex_n_yacc/lht_pat_file.output
Terminals which are not used

   PATTERN_TYPE


Grammar

    0 $accept: start $end

    1 start: initialize patterns

    2 initialize: /* empty */

    3 patterns: patterns pattern
    4         | /* empty */

    5 pattern: PATTERN VALUE '_' valueq '|' VALUE '_' valueq
    6        | PATTERN VALUE '-' '>' VALUE '_' VALUE '@' VALUE '|' VALUE '_' VALUE
    7        | PATTERN VALUE '-' '>' VALUE '_' valueq '|' VALUE '_' valueq

    8 valueq: VALUE
    9       | /* empty */


Terminals, with rules where they appear

$end (0) 0
'-' (45) 6 7
'>' (62) 6 7
'@' (64) 6
'_' (95) 5 6 7
'|' (124) 5 6 7
error (256)
PATTERN (258) 5 6 7
VALUE (259) 5 6 7 8
PATTERN_TYPE (260)


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
start (12)
    on left: 1, on right: 0
initialize (13)
    on left: 2, on right: 1
patterns (14)
    on left: 3 4, on right: 1 3
pattern (15)
    on left: 5 6 7, on right: 3
valueq (16)
    on left: 8 9, on right: 5 7


state 0

    0 $accept: . start $end

    $default  reduce using rule 2 (initialize)

    start       go to state 1
    initialize  go to state 2


state 1

    0 $accept: start . $end

    $end  shift, and go to state 3


state 2

    1 start: initialize . patterns

    $default  reduce using rule 4 (patterns)

    patterns  go to state 4


state 3

    0 $accept: start $end .

    $default  accept


state 4

    1 start: initialize patterns .
    3 patterns: patterns . pattern

    PATTERN  shift, and go to state 5

    $default  reduce using rule 1 (start)

    pattern  go to state 6


state 5

    5 pattern: PATTERN . VALUE '_' valueq '|' VALUE '_' valueq
    6        | PATTERN . VALUE '-' '>' VALUE '_' VALUE '@' VALUE '|' VALUE '_' VALUE
    7        | PATTERN . VALUE '-' '>' VALUE '_' valueq '|' VALUE '_' valueq

    VALUE  shift, and go to state 7


state 6

    3 patterns: patterns pattern .

    $default  reduce using rule 3 (patterns)


state 7

    5 pattern: PATTERN VALUE . '_' valueq '|' VALUE '_' valueq
    6        | PATTERN VALUE . '-' '>' VALUE '_' VALUE '@' VALUE '|' VALUE '_' VALUE
    7        | PATTERN VALUE . '-' '>' VALUE '_' valueq '|' VALUE '_' valueq

    '_'  shift, and go to state 8
    '-'  shift, and go to state 9


state 8

    5 pattern: PATTERN VALUE '_' . valueq '|' VALUE '_' valueq

    VALUE  shift, and go to state 10

    $default  reduce using rule 9 (valueq)

    valueq  go to state 11


state 9

    6 pattern: PATTERN VALUE '-' . '>' VALUE '_' VALUE '@' VALUE '|' VALUE '_' VALUE
    7        | PATTERN VALUE '-' . '>' VALUE '_' valueq '|' VALUE '_' valueq

    '>'  shift, and go to state 12


state 10

    8 valueq: VALUE .

    $default  reduce using rule 8 (valueq)


state 11

    5 pattern: PATTERN VALUE '_' valueq . '|' VALUE '_' valueq

    '|'  shift, and go to state 13


state 12

    6 pattern: PATTERN VALUE '-' '>' . VALUE '_' VALUE '@' VALUE '|' VALUE '_' VALUE
    7        | PATTERN VALUE '-' '>' . VALUE '_' valueq '|' VALUE '_' valueq

    VALUE  shift, and go to state 14


state 13

    5 pattern: PATTERN VALUE '_' valueq '|' . VALUE '_' valueq

    VALUE  shift, and go to state 15


state 14

    6 pattern: PATTERN VALUE '-' '>' VALUE . '_' VALUE '@' VALUE '|' VALUE '_' VALUE
    7        | PATTERN VALUE '-' '>' VALUE . '_' valueq '|' VALUE '_' valueq

    '_'  shift, and go to state 16


state 15

    5 pattern: PATTERN VALUE '_' valueq '|' VALUE . '_' valueq

    '_'  shift, and go to state 17


state 16

    6 pattern: PATTERN VALUE '-' '>' VALUE '_' . VALUE '@' VALUE '|' VALUE '_' VALUE
    7        | PATTERN VALUE '-' '>' VALUE '_' . valueq '|' VALUE '_' valueq

    VALUE  shift, and go to state 18

    $default  reduce using rule 9 (valueq)

    valueq  go to state 19


state 17

    5 pattern: PATTERN VALUE '_' valueq '|' VALUE '_' . valueq

    VALUE  shift, and go to state 10

    $default  reduce using rule 9 (valueq)

    valueq  go to state 20


state 18

    6 pattern: PATTERN VALUE '-' '>' VALUE '_' VALUE . '@' VALUE '|' VALUE '_' VALUE
    8 valueq: VALUE .

    '@'  shift, and go to state 21

    $default  reduce using rule 8 (valueq)


state 19

    7 pattern: PATTERN VALUE '-' '>' VALUE '_' valueq . '|' VALUE '_' valueq

    '|'  shift, and go to state 22


state 20

    5 pattern: PATTERN VALUE '_' valueq '|' VALUE '_' valueq .

    $default  reduce using rule 5 (pattern)


state 21

    6 pattern: PATTERN VALUE '-' '>' VALUE '_' VALUE '@' . VALUE '|' VALUE '_' VALUE

    VALUE  shift, and go to state 23


state 22

    7 pattern: PATTERN VALUE '-' '>' VALUE '_' valueq '|' . VALUE '_' valueq

    VALUE  shift, and go to state 24


state 23

    6 pattern: PATTERN VALUE '-' '>' VALUE '_' VALUE '@' VALUE . '|' VALUE '_' VALUE

    '|'  shift, and go to state 25


state 24

    7 pattern: PATTERN VALUE '-' '>' VALUE '_' valueq '|' VALUE . '_' valueq

    '_'  shift, and go to state 26


state 25

    6 pattern: PATTERN VALUE '-' '>' VALUE '_' VALUE '@' VALUE '|' . VALUE '_' VALUE

    VALUE  shift, and go to state 27


state 26

    7 pattern: PATTERN VALUE '-' '>' VALUE '_' valueq '|' VALUE '_' . valueq

    VALUE  shift, and go to state 10

    $default  reduce using rule 9 (valueq)

    valueq  go to state 28


state 27

    6 pattern: PATTERN VALUE '-' '>' VALUE '_' VALUE '@' VALUE '|' VALUE . '_' VALUE

    '_'  shift, and go to state 29


state 28

    7 pattern: PATTERN VALUE '-' '>' VALUE '_' valueq '|' VALUE '_' valueq .

    $default  reduce using rule 7 (pattern)


state 29

    6 pattern: PATTERN VALUE '-' '>' VALUE '_' VALUE '@' VALUE '|' VALUE '_' . VALUE

    VALUE  shift, and go to state 30


state 30

    6 pattern: PATTERN VALUE '-' '>' VALUE '_' VALUE '@' VALUE '|' VALUE '_' VALUE .

    $default  reduce using rule 6 (pattern)
